# pysheer

./: .gitignore  LICENSE  README.md  create-pysheer-complete.ps1  push_error.txt  pyproject.toml  quick-start.ps1  requirements.txt  setup.py
docs/: ADR-PLATAFORMA-METRICAS-PYSHEER.md  BRANDING-ICON-PYSHEER.md  CODEX-IMPLEMENTATION-BRIEF.md  ENGINEERING-REVIEW-ISSUES.md  doc.md  docd.md
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md  ADR-0009.md  ADR-0010.md  ADR-0011.md  ADR-0012.md  ADR-0013.md  ADR-0014.md  ADR-0015.md  ADR-0016.md  ADR-0017.md  ADR-0018.md  ADR-0019.md  ADR-0020.md  ADR-0021.md  ADR-0022.md  ADR-0023.md  ADR-0024.md  ADR-0025.md  ADR-0026.md  ADR-0027.md  ADR-0028.md  ADR-0029.md  ADR-0030.md  ADR-0031.md  ADR-0032.md  ADR-0033.md  ADR-0034.md  ADR-0035.md  ADR-0036.md  ADR-0037.md  ADR-0038.md  ADR-0039.md  ADR-0040.md  (+12 more)
docs/issues/: adr50-implementation.md
examples/: basic.py
src/pysheer/: __init__.py  cli.py  core.py  math_models.py
tests/: test_basic.py
